Start adding header/search section for the travel app

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;800&family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html,
+body {
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  margin-left: 0;
+  margin-right: 0;
+  font-family: "Noto Sans JP", sans-serif;
+}
+.website-name {
+  font-family: "Pacifico", cursive;
   color: white;
+  font-size: 60px;
 }
-
-.App-link {
-  color: #61dafb;
+.container {
+  display: flex;
+  justify-content: space-around;
+  background-image: url("./images/landing-page-1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 20px 10px;
+  width: 100vw;
+  margin: 0;
+  align-items: baseline;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bar {
+  width: 650px;
+  background: white;
+  box-shadow: 0 0 5px rgb(199, 199, 199);
+  height: 65px;
+  border-radius: 100vw;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 2px 10px;
+}
+.bar div {
+  border-radius: inherit;
+  padding: 10px 16px;
+  transition: background 250ms ease-in-out;
+}
+.bar div:hover {
+  background: hsl(0 0% 94%);
+}
+.location {
+  width: 30%;
+}
+.chek-in,
+.check-out {
+  width: 20%;
+}
+input {
+  background: none;
+  border: none;
+  padding: 6px 0 0 0;
+  color: #6c757d;
+}
+input :focus {
+  outline: none;
+}
+.guest {
+  width: 40%;
+  position: relative;
+}
+.guest button {
+  position: absolute;
+  top: 15%;
+  right: 10px;
+  transition: translateY(-50%);
+  background: #37b2b6;
+  color: white;
+  padding: 12px 14px;
+  font-size: 13px;
+  border: none;
+  border-radius: 50%;
+}
+::placeholder {
+  font-size: 12px;
 }
