added card components

--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,5 +1,5 @@
 .Banner {
-  background: url("./images/banner3.jpg") center center;
+  background: url("./images/landing-page-4.jpg") center center;
   height: 40vh;
   position: relative;
 }
