--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;800&family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&family=Nunito:wght@200;300;400;600;900&family=Poppins:wght@400;500;600;700&display=swap");
 
 * {
   margin: 0;
