--- a/src/SearchPage.css
+++ b/src/SearchPage.css
@@ -1,3 +1,6 @@
+.SearchPage {
+  font-family: "Nunito", sans-serif;
+}
 .SearchPage_info {
   padding: 20px;
 }
@@ -22,4 +25,6 @@
 }
 .SearchPage_info button:hover {
   background: hsl(0 0% 94%);
+  transition: ease-in-out;
+  transform: scale(1.05);
 }
